--- a/src/components/components.css
+++ b/src/components/components.css
@@ -5,13 +5,14 @@ body{
 #name {
     text-decoration:underline;
 }
+ #nav{
+     margin-bottom: 120px;
+ }
 
 
-
-.navigation #page1, #page2, #page3, #page4 
-    { background-color: #fff;}
-.navigation #page1:focus, #page2:focus, #page3:focus, #page4:focus 
-    { background-color: rgb(6, 140, 107);}
+.active{
+        color: rgb(15, 15, 16)
+    }
 
 li{
         list-style: none;
@@ -56,12 +57,11 @@ h1 {
     height: 2%;
     width: 2%;
 }
-#example-box1 {
-    border-style: solid;
-    border-width: 20px;
-    border-color: black;
-    padding: 10px 20px;
-  }
+
+#project {
+    height: 2%;
+    width: 2%;
+}
 
 #footer {
     font-size: small;
